@startuml
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL
package src.engine.gui.frames {
    !includesub src.engine.gui.frames.tools.puml!INTERNAL
    !includesub src.engine.gui.frames.modal.puml!INTERNAL
    class src.engine.gui.frames.Frame
    class src.engine.gui.frames.MainMenuBar
    class src.engine.gui.frames.Debug
    class src.engine.gui.frames.Loading
    class src.engine.gui.frames.TestWindow
    class src.engine.gui.frames.PolygonInformation
    class src.engine.gui.frames.Tools_3D
    class src.engine.gui.frames.MouseCoordinates
}

src.engine.gui.frames.Tools_3D -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.Debug -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.Loading -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.MainMenuBar -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.TestWindow -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.PolygonInformation -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.Tools -u-|> src.engine.gui.frames.Frame
src.engine.gui.frames.MouseCoordinates -u-|> src.engine.gui.frames.Frame

src.engine.gui.frames.MainMenuBar ..> src.engine.gui.frames.modal.CombineMapModal
src.engine.gui.frames.MainMenuBar ..> src.engine.gui.frames.modal.ConvolveNanModal
src.engine.gui.frames.MainMenuBar ..> src.engine.gui.frames.modal.InterpolateNanMapModal
src.engine.gui.frames.MainMenuBar ..> src.engine.gui.frames.modal.SubtractMapModal

src.engine.gui.frames.PolygonInformation ..> src.engine.gui.frames.modal.ConfirmationModal
!endsub

!startsub EXTERNAL
    !includesub src.engine.gui.frames.tools.puml!EXTERNAL
    !includesub src.engine.gui.frames.modal.puml!EXTERNAL

    src.engine.gui.frames.MainMenuBar ..> src.program.ViewMode
    src.engine.gui.GUIManager o--o src.engine.gui.frames.Frame

    src.engine.gui.frames.MainMenuBar ..> src.engine.scene.map_transformation.FillNanMapTransformation

    src.engine.gui.frames.PolygonInformation ..> src.engine.gui.Font
    src.engine.gui.frames.PolygonInformation ..> src.engine.gui.frames.modal.PolygonParameterModal
    src.engine.gui.frames.Tools_3D ..> src.engine.gui.Font
!endsub

hide members

@enduml